<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="124dp"
    android:background="?selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_article_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/gilroybold"
            android:lineHeight="24dp"
            android:maxLines="2"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            tools:text="@string/title_holder" />

        <TextView
            android:id="@+id/item_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="?android:textColorSecondary"
            tools:text="@string/desc_holder" />

        <TextView
            android:id="@+id/item_post_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:textColorPrimary"
            tools:text="@string/author" />

    </LinearLayout>

</LinearLayout>